# rentctrl

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: acs_profile_variables.csv  city_audit_status_source.csv  city_extension_catalog.csv  city_extension_question_catalog.csv  outcome_catalog.csv  policy_events_core.csv  project_settings.yml  source_catalog.csv  state_metadata.csv
docs/: 00_project_overview.md  01_research_questions.md  02_design_choice.md  03_data_sources.md  04_identification_and_methods.md  06_local_extensions.md  07_risks_and_mitigations.md  cities.html  index.html  states.html
results/: README.md  credibility_interpretation.md  free_data_extensions.md  los_angeles_public_reporting_note.md  nyc_additional_question_shortlist.md  quarterly_reporting.md  sf_inventory_reporting_note.md  weho_public_reporting_note.md
scripts/: bootstrap_seed_data.py  build_core_state_panel.py  build_policy_panels.py  download_acs_state_profile.py  download_bps_state_annual.py  download_fhfa_hpi.py  download_qcew_state_quarters.py  export_site_data.py  generate_city_audit_status.py  reproduce_public_baseline.py  run_baseline_event_study.py  run_credibility_checks.py  run_free_data_extensions.py  run_los_angeles_property_activity_pilot.py  run_mountain_view_search_pilot.py  run_nyc_additional_question_shortlist.py  run_nyc_borough_year_comparison.py  run_nyc_enriched_building_panel_model.py  run_nyc_enriched_stratified_comparison.py  run_nyc_within_block_matching.py  run_nyc_within_communityboard_matching.py  run_quarterly_reporting.py  (+3 more)
(+251 files in other folders)
